Update TokenLimiter.java